tests/specs/type_literal_index_signature.txt
# mod.ts
export type T = { [key: string]: number; }

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export type T = { [key: string]: number; }
  | ^


# output.txt
Defined in file:///mod.ts:1:1

type T = { [key: string]: number; }


# output.json
[
  {
    "kind": "typeAlias",
    "name": "T",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "typeAliasDef": {
      "tsType": {
        "repr": "",
        "kind": "typeLiteral",
        "typeLiteral": {
          "constructors": [],
          "methods": [],
          "properties": [],
          "callSignatures": [],
          "indexSignatures": [
            {
              "readonly": false,
              "params": [
                {
                  "kind": "identifier",
                  "name": "key",
                  "optional": false,
                  "tsType": {
                    "repr": "string",
                    "kind": "keyword",
                    "keyword": "string"
                  }
                }
              ],
              "tsType": {
                "repr": "number",
                "kind": "keyword",
                "keyword": "number"
              },
              "location": {
                "filename": "file:///mod.ts",
                "line": 1,
                "col": 18,
                "byteIndex": 18
              }
            }
          ]
        }
      },
      "typeParams": []
    }
  }
]
